--- a/src/main.css
+++ b/src/main.css
@@ -1,8 +1,16 @@
 /* https://coolors.co/4d9de0-e15554-e1bc29-3bb273-7768ae */
 @font-face {
     font-family: Roboto;
-    src: url(./Roboto/Roboto-Medium.ttf)
+    src: url(./Roboto/Roboto-Medium.ttf);
+    font-weight: 500;
 }
+
+@font-face {
+    font-family: Roboto;
+    src: url(./Roboto/Roboto-Light.ttf);
+    font-weight: 300;
+}
+
 /* general */
 *, *::before, *::after {
     box-sizing: border-box;
@@ -14,16 +22,16 @@ body {
     display: flex;
     height: 100vh;
     font-family: Roboto;
+    font-weight: 300;
     color: rgb(80, 80, 80);
 }
-
-
 
 /* sidebar */
 .sidebar {
     flex: 2;
     padding: 50px 25px;
     background-color: #f5f6f8;
+    font-weight: 500;
 }
 
 .sidebar div {
@@ -65,6 +73,8 @@ body {
 /* content */
 .content {
     flex: 5;
+    display: flex;
+    flex-direction: column;
     padding: 10% 15%;
 }
 
@@ -73,6 +83,7 @@ body {
     justify-content: space-between;
     padding: 10px;
     border-bottom: 2px solid #4d9de0;
+    font-weight: 500;
 }
 
 .task-content {
@@ -84,6 +95,10 @@ body {
     flex-direction: column;
     padding: 5px 0;
     border-bottom: 1px solid #4d9de0;
+}
+
+.task .material-icons {
+    cursor: pointer;
 }
 
 .main-content {
@@ -104,7 +119,15 @@ body {
 }
 
 .detail-properties {
+    font-size: 14px;
+}
 
+label {
+    display: flex;
+}
+
+label div {
+    padding: 0 10px;
 }
 
 .task .hidden {
@@ -112,12 +135,55 @@ body {
 }
 
 
-
+/* task form */
 .task-form {
+    align-self: center;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    width: 80%;
+    border-radius: 5px;
+    border: 1px solid gray;
 }
 
-.task-form input {
-    width: 150px;
+
+.task-form-header {
+    padding: 15px;
+    border-bottom: 1px solid gray;
+}
+
+.task-form-content {
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
+}
+
+.property-container { 
+    display: flex;
+    flex-direction: column;
+}
+
+.property-container.description input {
+    height: 150px;
+}
+
+.property-name {
+    padding: 10px 0;
+}
+
+.task-form-property {
+    height: 25px;
+    border-radius: 5px;
+    border-color: lightgray;
+}
+
+.task-form-footer {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.task-form-footer input {
+    width: 100px;
+    height: 50px;
+    margin: 15px;
+    border-radius: 5px;
 }
