--- a/src/main.css
+++ b/src/main.css
@@ -94,7 +94,7 @@ body {
     display: flex;
     justify-content: space-between;
     padding: 10px;
-    border-bottom: 2px solid #4d9de0;
+    border-bottom: 2px solid rgb(230, 230, 230);
     font-weight: 400;
 }
 
@@ -106,8 +106,20 @@ body {
 .task {
     display: flex;
     flex-direction: column;
-    padding: 5px 0;
-    border-bottom: 1px solid #4d9de0;
+    padding: 5px 10px;
+    border-bottom: 1px solid rgb(230, 230, 230);
+}
+
+.task.high {
+    border-left: 10px solid red;
+}
+
+.task.medium {
+    border-left: 10px solid blue;
+}
+
+.task.low {
+    border-left: 10px solid green;
 }
 
 .task .material-icons {
